@@ -96,6 +96,7 @@ Version 1.5.0-svn:
      process as well.
    * new progressive parameter for animations : submerge
    * new progressive parameter for animations : x and y
+   * image_diagonal now also works with normal [frame]
 
 Version 1.4:
  * language and i18n:
